chore: upgrade Java version from 11 to 21
- Update java.version property from 11 to 21 in root pom.xml
- Remove obsolete --add-modules java.xml compiler arg
- Remove obsolete oss-parent:7 parent POM
- Update JUnit from 5.10.1 to 5.11.4 and platform from 1.10.1 to 1.11.4
- Update CI workflows (master + PR) to use JDK 21
- Update README JDK version references
- Fix deprecated Integer constructor in PrefetchIterator Javadoc